css/responsive/slim-style.css
/* General */
.RSelectedButton {
    background:#d2d2d2;
    color: #4E4646 !important;
}
.ResponsiveButton {
    height: 45px;
    display: inline-block;
    line-height: 45px;
    text-align: center;
    border-radius: 6px;
    vertical-align: top;
    margin: 0;
    padding: 0;
    box-shadow: 1px 1px 8px -2px;
}
.ui-layout-container {
    min-width:0;
    overflow:hidden;
}

.ResponsiveViewFullSite {
    text-align: center;
    margin-top: 10px;
}
#PreviewImageLarge {
    width: 100%;
}
body {
    -webkit-overflow-scrolling: touch;
}

@media(max-width:1200px) {
    
    #UICenter{
        height: auto !important;
    }

    #CollectionDiv {
        position:fixed !important;
    }
    
    .ui-layout-resizer {
        position:fixed !important;
    }
    
    .ui-layout-pane-center
        {
        left: 0 !important;
        }

    body{
        height: 100% !important;
        overflow: scroll !important;
    }
    
    .Question .stdwidth, .stdwidth {
        width:100%;
    }
    
    #SearchBarContainer {
        margin:0;
        width:96%;
        margin-left:2%;
        margin-right:2%;
        margin-top: 5px;
        margin-bottom: 5px;
    }
    .SlimHeader #CentralSpaceContainer,#CentralSpaceContainer {
        width:94%;
        margin-left:3%;
        margin-right:3%;
        padding:0;
    }
    #Footer {
        width:94%;
        margin-left:3%;
        margin-right:3%;
    }
    #CentralSpace a, #Header a, #Footer a {
        font-size:1em;
    }
    #CentralSpace a.HomePanel {
        font-size:1em;
    }

    div#Header.SlimHeaderFixedPosition #HeaderNav1Click { margin-right: 30px; }
    div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 16px; }
    div#SearchBox.SlimHeaderFixedPosition { margin-top: 46px; }

    .ui-layout-west { display:none; }
}
/* General Forms */
@media(max-width:1100px) {   
    .Question label {
        width:100%;
    }
    .Question .stwidth, .stdwidth {
        padding:5px;
        font-size:1em;
        border-radius:5px;
    }
    input[type=checkbox] {
        -ms-transform: scale(1.5); /* IE */
        -moz-transform: scale(1.5); /* FF */
        -webkit-transform: scale(1.5); /* Safari and Chrome */
        -o-transform: scale(1.5); /* Opera */
        height:auto;
    }
    input[type="radio"] {
        height:auto;
        vertical-align: top;
    }
    input {
        display: inline-block;
        height: 25px;
        padding: 3px;
        border-radius: 5px;
        line-height: 1em;
        font-size: 1em;
    }
    input[type="submit"], input[type="button"], button {
        cursor:pointer;
    }
    input[type="submit"]:hover, input[type="button"]:hover, button:hover {
        background: #d2d2d2;
        box-shadow: none;
    }
    .Inline input {
        margin:0;
    }
    #CentralSpace .Question select {
        margin: 3px 0;
        font-size: 1em;
        border-radius: 5px;
    }
  
    #custom_access{
        padding:5px;
    }
    .verticalcheckboxes, .editcheckboxes, .checkboxes, .radioblock {
        padding-left:0;
        margin-top:1px;
    }
    .BasicsBox .Question {
        overflow-x:auto;
    }
    .customFieldset table {
        white-space: nowrap;
    }
    #specific_user_groups {
        padding-left: 0 !important;
    }
    table#ResourceDownloadOptions {
        font-size: 80%;
    }
    .RecordPanel .RecordDownloadSpace .DownloadButton {
        min-width: 80px;
    }
    .RecordPanel .RecordDownloadSpace .DownloadFileSize {
        font-size: 90%;
    }
    #login_box .Question.KeepLoggedIn {
        margin-left: 3px;
    }
}
@media(max-width:700px) {
    .FormHelp {
        margin:0 0 10px 0;
    }
    .FormWide .Question .FormHelp {
        margin:0 0 10px 0;
    }
    .FormWide .Question .FormHelp .FormHelpInner {
        width: 100%;
        box-sizing: border-box;
        margin-left: 0;
    }
}
@media(max-width:525px) {
    
    .FormWide .Question label{width: 100%}
    .FormWide .Question .stdwidth, .FormWide .Question .tickset{width: 100%}
    .CategoryBox {
        width:100%;
    }
}
/* Login Forms */
}
@media(max-width:750px) {
    #AntiSpamImage {
        margin-left: 0 !important;
    }
    
    .RecordPanel {
    padding: 5px 5px 5px 5px;
    }
    
    #ResourceWorkflowTable {
        text-align: center;
    }
    
    #ResourceWorkflowTable td {
        float :left;
        clear :left;
        margin-left :0;
        margin-right:0;
        padding-left:0;
        padding-right:0;
        width: 100%;
    }
    
    #ResourceWorkflowTable input[type="submit"] {
    padding: 3px 0;
    margin: 0;
}
}

/* Header */
#HeaderResponsive {
    text-align: center;
}
#HeaderImg {
    max-width:320px;
    clear:both;
    display:inline-block;
}
.ResponsiveHeaderButton {
    margin-bottom:5px;
    width: 35%;
}
#HeaderButtons {
    display:none;
}
/* ... */

